<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
    <artifactId>SpringBoot</artifactId>
    <groupId>com.somnus</groupId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>

  <artifactId>SpringBoot-00-J2SE</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- JDBC Driver -->
    <jdbc.driver.groupId>mysql</jdbc.driver.groupId>
    <jdbc.driver.artifactId>mysql-connector-java</jdbc.driver.artifactId>
    <jdbc.driver.version>5.1.27</jdbc.driver.version>
    <!-- commons tools -->
    <commons.io.version>2.5</commons.io.version>
    <commons.beanutils.version>1.9.3</commons.beanutils.version>
    <commons.codec.version>1.10</commons.codec.version>
    <commons.net.version>3.5</commons.net.version>
    <!-- apache tools -->
    <apache.commons.collections.version>4.1</apache.commons.collections.version>
    <apache.commons.lang3.version>3.5</apache.commons.lang3.version>
    <apache.commons.configuration.version>2.1</apache.commons.configuration.version>
    <apache.commons.compress.version>1.5</apache.commons.compress.version>
    <apache.httpcomponents.version>4.5.2</apache.httpcomponents.version>
    <apache.ant.version>1.10.0</apache.ant.version>
    <!-- sftp -->
    <jsch.version>0.1.54</jsch.version>
    <!-- time -->
    <jodatime.version>2.9.7</jodatime.version>
    <!-- pinyin -->
    <pinyin.version>2.5.1</pinyin.version>
    <!-- json -->
    <jackson.version>2.12.5</jackson.version>
    <json.lib.version>2.4</json.lib.version>
    <alibaba.fastjson.version>1.2.16</alibaba.fastjson.version>
    <alibaba.druid.version>1.0.25</alibaba.druid.version>
    <!-- Java JNA -->
    <jna.version>4.1.0</jna.version>
    <!-- cglib -->
    <cglib.version>2.2.2</cglib.version>
    <!-- mongodb -->
    <mongo.version>2.12.4</mongo.version>
    <!--bouncy castle -->
    <bouncy.castle.version>1.52</bouncy.castle.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- jdbc driver -->
    <dependency>
      <groupId>${jdbc.driver.groupId}</groupId>
      <artifactId>${jdbc.driver.artifactId}</artifactId>
      <version>${jdbc.driver.version}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>cn.hutool</groupId>
      <artifactId>hutool-all</artifactId>
      <version>5.7.19</version>
    </dependency>

    <!-- 加入commons tools依赖包 -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons.io.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-beanutils</groupId>
      <artifactId>commons-beanutils</artifactId>
      <version>${commons.beanutils.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>${commons.codec.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-net</groupId>
      <artifactId>commons-net</artifactId>
      <version>${commons.net.version}</version>
    </dependency>

    <!-- apache tools -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>${apache.commons.collections.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <version>${apache.commons.compress.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-configuration2</artifactId>
      <version>${apache.commons.configuration.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${apache.commons.lang3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <version>${apache.ant.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>fluent-hc</artifactId>
      <version>${apache.httpcomponents.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpmime</artifactId>
      <version>${apache.httpcomponents.version}</version>
    </dependency>

    <!-- 加入sftp依赖包 -->
    <dependency>
      <groupId>com.jcraft</groupId>
      <artifactId>jsch</artifactId>
      <version>${jsch.version}</version>
    </dependency>

    <!-- joda time -->
    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>${jodatime.version}</version>
    </dependency>

    <!-- 加入pinyin4j依赖包 -->
    <dependency>
      <groupId>com.belerweb</groupId>
      <artifactId>pinyin4j</artifactId>
      <version>${pinyin.version}</version>
    </dependency>

    <!-- 加入json依赖包 -->
    <dependency>
      <groupId>net.sf.json-lib</groupId>
      <artifactId>json-lib</artifactId>
      <version>${json.lib.version}</version>
      <classifier>jdk15</classifier><!--指定jdk版本 -->
    </dependency>
    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>fastjson</artifactId>
      <version>${alibaba.fastjson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>druid</artifactId>
      <version>${alibaba.druid.version}</version>
    </dependency>

    <!-- Java JNA -->
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>${jna.version}</version>
    </dependency>

    <!-- 加入CGLIB 依赖包 -->
    <dependency>
      <groupId>cglib</groupId>
      <artifactId>cglib</artifactId>
      <version>${cglib.version}</version>
    </dependency>

    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>easyexcel</artifactId>
      <version>2.2.3</version>
    </dependency>

    <!-- mongodb -->
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongo-java-driver</artifactId>
      <version>${mongo.version}</version>
    </dependency>

    <!--bouncy castle（轻量级密码术包） -->
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>${bouncy.castle.version}</version>
    </dependency>

    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>4.9.3</version>
    </dependency>

  </dependencies>

</project>